# artificial_hands_toolkit

./: .gitignore  README.md
artificial_hands_base/: CMakeLists.txt  package.xml
artificial_hands_base/scripts/: fake_ft_sensor_node.py
artificial_hands_base/src/: Dynamics.cpp  Kinematics.cpp  frame_kinematics_node.cpp  wrist_dynamics_node.cpp
artificial_hands_bringup/: CMakeLists.txt  README.md  package.xml
artificial_hands_bringup/config/: kinematics_config_192.168.1.100.yaml  kinematics_config_192.168.1.2.yaml  kinematics_config_192.168.1.3.yaml  servo_config.yaml  (+1 more)
artificial_hands_core/: CMakeLists.txt  package.xml
artificial_hands_core/artificial_hands_base/: CMakeLists.txt  package.xml
artificial_hands_core/artificial_hands_base/include/artificial_hands_base/: BaseAlgorithm.hpp  BaseCommon.hpp  BaseFTSensor.hpp  BaseFilters.hpp  BaseROSCommon.hpp  FrameDynamics.hpp  FrameKinematics.hpp
artificial_hands_core/artificial_hands_dynamics/: CMakeLists.txt  package.xml
artificial_hands_core/artificial_hands_dynamics/config/: calib_params.yaml  low_pass_filters.yaml
artificial_hands_core/artificial_hands_dynamics/include/artificial_hands_dynamics/: WristFTCalibration.hpp  WristFTContactDetection.hpp  WristFTProprioception.hpp
artificial_hands_core/artificial_hands_dynamics/launch/: frame_kinematics_node.launch  wrist_dynamics_node.launch
artificial_hands_core/artificial_hands_dynamics/src/: frame_kinematics_node.cpp  wrist_dynamics_node.cpp
artificial_hands_demos/: CMakeLists.txt  package.xml  setup.py
artificial_hands_demos/config/: mia_hand_on_ur5_moveit_servo_config.yaml
artificial_hands_demos/launch/: frame_kinematics.launch  frame_kinematics_demo.launch  handover_release.launch  handover_release_demo.launch  mia_hand_on_ur5_moveit_servo.launch
artificial_hands_demos/scripts/: handover_release_smach.py  handover_release_smach_2.py
artificial_hands_demos/src/: frame_kinematics_node.cpp  handover_wrist_node.cpp  wrist_node.cpp
artificial_hands_demos/src/handover_demos/: ft_calib_mapper.py  ft_calib_node.py  handover_proprioceptive_base.py  handover_proprioceptive_gui.py  handover_proprioceptive_node.py
artificial_hands_demos/src/handover_release_demo/: constants.py  handover_release_smach.py  handover_release_smach_base.py
artificial_hands_description/: CMakeLists.txt  package.xml
artificial_hands_msgs/: CMakeLists.txt  package.xml
artificial_hands_msgs/action/: RobotHumanHandoverReaching.action  TrajectoryGeneration.action
artificial_hands_msgs/cfg/: ProcessVariance.cfg  WristFTProprioception.cfg
artificial_hands_msgs/msg/: CartesianTrajectoryPointStamped.msg  Detection.msg  DetectionStamped.msg  FrameKinematics.msg  FrameKinematicsStamped.msg  Wrist.msg  WristDynamics.msg  WristDynamicsStamped.msg  WristStamped.msg
artificial_hands_msgs/srv/: FrameKinematicsCommand.srv  WristCommand.srv  WristDynamicsCommand.srv
artificial_hands_nodes/: CMakeLists.txt  package.xml
artificial_hands_nodes/scripts/: arm_commander_gui_node.py  arm_commander_node.py  cartesian_trajectory_generator_gui_node.py  cartesian_trajectory_generator_node.py  cartesian_trajectory_tf_monitor_node.py  dmp_extended_servo_node.py  fake_ft_sensor_node.py  fake_handover_module_test_node.py  fake_low_level_engine_node.py  force_torque_sensor_calibration_node.py  mia_hand_commander_gui_node.py  mia_hand_commander_node.py  mia_hand_trajectory_test_node.py  object_recognition_node.py  robot_commander_gui_node.py  robot_commander_node.py  robot_human_handover_reaching_node.py
artificial_hands_nodes/src/: frame_kinematics_node.cpp  onrobot_hex_driver_node.cpp  wrist_dynamics_node.cpp
artificial_hands_py/: CMakeLists.txt  README.md  package.xml  setup.py
artificial_hands_py/include/artificial_hands_py/: pyBaseConversions.hpp  pyBaseFilter copy.hpp  pyBaseFilter.hpp  pyBaseWrapper.hpp  pyWristFTCalibration.hpp  pyWristFTContactDetection.hpp  pyWristFTDetection.hpp  pyWristFTWrapper.hpp
artificial_hands_py/scripts/: dmp_extended_servo_node.py  handover_release_node.py  handover_release_smach_node.py  key_teleop_servo_node.py
artificial_hands_py/src/: artificial_hands_py_base.cpp  pyatk.cpp
artificial_hands_py/src/artificial_hands_py/: __init__.py  artificial_hands_py_base.py  commanders.py  controller_manager_base.py  harmonic_arm_commander.py  harmonic_servo_commander.py  mia_hand_commander.py
artificial_hands_py/src/artificial_hands_py/cartesian_trajectory_generator/: __init__.py  cartesian_mdof_point_publisher.py  cartesian_publishers.py  cartesian_trajectory_base.py  cartesian_trajectory_generator.py  cartesian_trajectory_generator_gui.py  cartesian_trajectory_plugins.py  cartesian_trajectory_tf_monitor.py
artificial_hands_py/src/artificial_hands_py/handover_release_smach/: __init__.py  constants.py  handover_release_smach.py  handover_release_smach_base.py
artificial_hands_py/src/artificial_hands_py/low_level_execution_modules/: force_torque_sensor_calibration_module.py  object_grasp_module.py  object_recognition_module.py  robot_human_handover_reaching_module.py  robot_move_waypoints_module.py  wrist_dynamics_module.py
artificial_hands_py/src/artificial_hands_py/moveit_trajectory_validator/: moveit_trajectory_validator.py
artificial_hands_py/src/artificial_hands_py/pyatk/: __init__.py  base_filters.py  wrist_ft_detection.py
artificial_hands_py/src/artificial_hands_py/robot_commander/: __init__.py  arm_commander.py  arm_commander_gui.py  cartesian_servo_commander.py  controller_manager_base.py  harmonic_servo_commander.py  mia_hand_commander.py  mia_hand_commander_gui.py  mia_hand_trajectory_test.py  pose_based_servo_commander.py  robot_commander.py  robot_commander_base.py  robot_commander_gui.py  servo_commander_base.py  twist_servo_commander.py  wrist_dynamics_base.py  wrist_dynamics_interface.py
artificial_hands_py/src/artificial_hands_py_base/: __init__.py  base_filters.py  wrist_ft_calibration.py  wrist_ft_detection.py
artificial_hands_toolkit/: CMakeLists.txt  package.xml
artificial_hands_wrist/: CMakeLists.txt  package.xml
(+131 files in other folders)
